Fixed #33781 -- Restored alignment for admin split-field timezone warnings.
Regression in f3e2bb0833105f43efc0cc6f19c8465bc1b1a785.
Refs #33750 and #27207.

--- a/django/contrib/admin/static/admin/css/forms.css
+++ b/django/contrib/admin/static/admin/css/forms.css
@@ -123,6 +123,12 @@ form .aligned div.help {
     padding-left: 10px;
 }
 
+form .aligned p.datetime div.help.timezonewarning {
+    margin-left: 0;
+    padding-left: 0;
+    font-weight: normal;
+}
+
 form .aligned label + p.help,
 form .aligned label + div.help {
     margin-left: 0;
